--- a/Round2/Round2_file14.Rmd
+++ b/Round2/Round2_file14.Rmd
@@ -8,10 +8,10 @@ output: html_document
 
 
 ```{r preliminaries}
-file.name <- "file8"
+file.name <- "file14"
 
-balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  4e2# 1e3
+balance <- TRUE   # Set for TRUE for balanced folding ana refolding.
+n.replications <-  1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
@@ -23,64 +23,33 @@ source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
 effects <- seq(0, 0.5, length=3) # change in location
-# effects <- sqrt(40/400) * seq(0, 0.5, length=3) # change in location
-
 
 ## Signal in scale
 Sigma <- diag(p)
-# Sigma <- ar1_cov(p, rho=0.8)
-# Sigma <- comSym_cov(p, rho=0.7) 
-# Sigma <- diag((1:p)*p/sum(1:p))
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
-# Sys.getpid()
-
 library(RhpcBLASctl)
 blas_set_num_threads(1)
-# get_num_cores()
-# get_num_procs()
-# blas_get_num_procs()
 
 registerDoMC(cores=110)
-
-# Testing parallelization:
-# foreach(i=1:60) %dopar% {
-#   eigen(matrix(rnorm(1e6), ncol = 1e3, nrow = 1e3))$values[[1]][[1]]
-# }
-# foreach(i=1:20) %:% foreach(j=1:3) %dopar% mean(rnorm(1e7))
 ```
 
 
 ```{r independent noise variable folds}
 pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   foreach(effect=effects, .combine=rbind)  %do% {
+    # effect <- effects[[2]]
     
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
     
-    ## t noise
-    # .noise <- rmvt(n=n, sigma = Sigma, df=3) 
-    
-    ## Shift alternative:
-    # noise <- .noise + effect * labels
-    
-    ## Scale alternative:
-    A <- diag(n) 
-    A[labels,labels] <- A[labels,labels]*(1:n)^(-effect)
-    noise <- A %*% .noise 
-    # plot(noise, col=labels+1, cex=1); abline(h=0,v=0, lty=2)
-    
-    # Golland's mixture null:
-    # .noise <- rmvnorm(n=n, sigma = Sigma) # Gaussian noise
-    # shift <- rep(sqrt(9/p), p)
-    # shift.group <- 2*rbinom(n, 1, (0.5-effect)^labels*(0.5+effect)^(1-labels))-1
-    # noise <- .noise + t(outer(shift, shift.group))
-    # plot(noise, col=labels+1, cex=1); abline(h=0,v=0, lty=2)
+    # Shift alternative:
+    noise <- .noise + effect * labels
     
     ## Compute observed statistic
     x1 <- noise[labels,]
@@ -95,20 +64,18 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       Oracle=t_Oracle(x1, x2, Sigma, Sigma),
       Hotelling=t_Hotelling(x1, x2, FALSE),
       Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
       sd=t_SD(x1, x2),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
+      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
+      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
+      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
+      lda.highdim.1=t_dlda_cv(noise, labels, labels, fold.ids, type=1),
+      lda.highdim.2=t_hdrda_cv(noise, labels, labels, fold.ids, type=1),
+      lda.highdim.3=t_sdlda_cv(noise, labels, labels, fold.ids, type=1),
+      lda.highdim.4=t_sdlda_boot(noise, labels, B=50, type2=1, type=1),
+      svm.highdim.1=t_svml2_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
+      svm.highdim.2=t_svm_highdim_boot(noise, labels, B=50, type2=1, cost=1e-1, type=1)
     )
+    
     
     
     # Prepare to permute
@@ -138,19 +105,16 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
         Oracle=t_Oracle(x1, x2, Sigma, Sigma),
         Hotelling=t_Hotelling(x1, x2, FALSE),
         Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-        lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-        lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-        lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
         sd=t_SD(x1, x2),
-        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-        svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-        svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-        svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-        svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-        svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
+        lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
+        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
+        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
+        lda.highdim.1=t_dlda_cv(noise, labels, labels, fold.ids, type=1),
+        lda.highdim.2=t_hdrda_cv(noise, labels, labels, fold.ids, type=1),
+        lda.highdim.3=t_sdlda_cv(noise, labels, labels, fold.ids, type=1),
+        lda.highdim.4=t_sdlda_boot(noise, labels, B=50, type2=1, type=1),
+        svm.highdim.1=t_svml2_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
+        svm.highdim.2=t_svm_highdim_boot(noise, labels, B=50, type2=1, cost=1e-1, type=1)
       )
     } # End permutation
     
@@ -165,13 +129,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 } 
   
 pbPost(type = "note", body = "Done", the.message)
-# save.image(file=paste(file.name,".RData", sep=''))
+save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
 
 ```{r analyze multiple effects}
-# load("file2.RData")
+# load("file14.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
