--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -1391,3 +1391,13 @@ Contact: tongt@hkbu.edu.hk},
 	year={2006},
 	publisher={Wiley Online Library}
 }
+
+@article{ley2015high,
+	title={High-dimensional tests for spherical location and spiked covariance},
+	author={Ley, Christophe and Paindaveine, Davy and Verdebout, Thomas},
+	journal={Journal of Multivariate Analysis},
+	volume={139},
+	pages={79--91},
+	year={2015},
+	publisher={Elsevier}
+}
