--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -277,13 +277,13 @@ We return to this matter in the Discussion.
 	\label{fig:simulation_1}
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=1\linewidth]{"art/2016-07-26 20:55:48"}
+		\includegraphics[width=1\linewidth]{"art/file3"}
 		\caption{\textbf{Unbalanced.}} %TODO: caption  
 		\label{fig:simulation_11}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+		\includegraphics[width=1\linewidth]{"art/file2"}
 		\caption{\textbf{Balanced.}} %TODO: caption 
 		\label{fig:simulation_12}
 	\end{subfigure}
@@ -487,7 +487,7 @@ The same as Table~\ref{tab:collected} for regularized (high dimensional) predict
 
 \begin{figure}[ht]
 \centering
-	  \includegraphics[width=0.7\linewidth]{"art/2016-08-17 08:48:18"}
+	  \includegraphics[width=0.7\linewidth]{"art/file14"}
 	  \caption{
 \textbf{HighDim Classifier--} 
 		The power of a permutation test with various test statistics. 
@@ -582,7 +582,7 @@ The type of bootstrap, bLOO versus b$0.632$, does not change the power.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.7\linewidth]{"art/2016-08-30 18:08:08"}
+	\includegraphics[width=0.7\linewidth]{"art/file13"}
 	\caption{
 		\textbf{Bootstrap--}
 		The power of a permutation test with various test statistics. 
@@ -687,7 +687,7 @@ We find that also in this mixture class of models a location test has more power
 
 \begin{figure}[ht]
 \centering
-	  \includegraphics[width=0.7\linewidth]{"art/2016-08-08 07:33:05"}
+	  \includegraphics[width=0.7\linewidth]{"art/file12"}
 	  \caption{\textbf{Mixture--} $\x_i = \chi_i \mu + \eta_i; \chi_i = \set{-1,1}$ and $\prob{\chi_i=1}=(1/2-p)^{\y^*_i}  (1/2+p)^{1-\y^*_i}$. $\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
 	  The effect, $p$, is color and shape coded and varies over $0$ (red circle), $1/4$ (green triangle) and $1/2$ (blue square). }
 	\label{fig:golland}
@@ -832,13 +832,13 @@ The reported power is the proportion of replication where the permutation p-valu
 \label{fig:n_folds}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
+	  \includegraphics[width=1\linewidth]{"art/file4"}
 	  \caption{\textbf{2-fold} cross validation. Balanced folding.}  
 	\label{fig:n_folds_1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-07-29 07:18:24"}
+	  \includegraphics[width=1\linewidth]{"art/file6"}
 	  \caption{\textbf{20-fold} cross validation. Balanced folding} 
 	\label{fig:n_folds_2}
 	\end{subfigure}
@@ -852,13 +852,13 @@ The reported power is the proportion of replication where the permutation p-valu
 \label{fig:n_folds_unbalanced}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-08-05 09:37:35"}
+	  \includegraphics[width=1\linewidth]{"art/file5"}
 	  \caption{\textbf{2-fold} cross validation. Unbalanced folding.} 
 	\label{fig:n_folds_unbalanced_1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-08-06 07:57:22"}
+	  \includegraphics[width=1\linewidth]{"art/file7"}
 	  \caption{\textbf{20-fold} cross validation. Unbalanced folding.} 
 	\label{fig:n_folds_unbalanced_2}
 	\end{subfigure}
@@ -872,13 +872,13 @@ The reported power is the proportion of replication where the permutation p-valu
 %\label{fig:simulation_1}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-07-30 10:33:05"}
+	  \includegraphics[width=1\linewidth]{"art/file8"}
 	  \caption{\textbf{Scale Change--} $\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effects are a scale change.}  
 	\label{fig:scale_change}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-08-04 19:32:17"}
+	  \includegraphics[width=1\linewidth]{"art/file9"}
 	  \caption{\textbf{Heavytailed--} $\eta_i$ is not $p$-variate Gaussian, but rather $p$-variate t, with $df=3$ .  } 
 	\label{fig:t_null}
 	\end{subfigure}
@@ -886,24 +886,6 @@ The reported power is the proportion of replication where the permutation p-valu
 
 
 
-
-\begin{figure}[h]
-\centering
-\caption{\mycaption}	
-\label{fig:large_sample}
-	\begin{subfigure}{.5\textwidth}
-	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05zoom"}
-	  \caption{\textbf{Low-Dimension--} False positive rates for $n=40$.} 
-	\label{fig:large_sample_1}
-	\end{subfigure}%
-	\begin{subfigure}{.5\textwidth}
-	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33zoom"}
-	  \caption{\textbf{High-Dimension--} False positive rates for $n=400$.} 
-	\label{fig:large_sample_2}
-	\end{subfigure}
-\end{figure}
 
 
 
@@ -913,13 +895,13 @@ The reported power is the proportion of replication where the permutation p-valu
 \caption{\mycaption}	
 	\begin{subfigure}{.4\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-08-11 08:32:39"}
+%	  \includegraphics[width=1\linewidth]{"art/file10"}
 	  \caption{\textbf{High-Dimension, local alternative--} $n=400$, $\mu \in \frac{1}{\sqrt{10}} \times \set{0,1/4,1/2}.$} 
 	\label{fig:large_sample_3}
 	\end{subfigure}
 		\begin{subfigure}{.4\textwidth}
 		  \centering
-		  \includegraphics[width=1\linewidth]{"art/2016-08-07 20:11:46"}
+		  \includegraphics[width=1\linewidth]{"art/file11"}
 		  \caption{\textbf{AR(1) dependence--} $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
 		\label{fig:ar_1}
 	\end{subfigure}
