--- a/Round2/Round2_file1.Rmd
+++ b/Round2/Round2_file1.Rmd
@@ -8,12 +8,12 @@ output: html_document
 
 
 ```{r preliminaries}
-file.name <- "file14"
+file.name <- "file1"
 
-balance <- TRUE   # Set for TRUE for balanced folding ana refolding.
+balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <-  1e3
 p <- 23
-n <- 4e2 # total sample size-> n/2 in each group.
+n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
 n.folds <- 4
 cost.1 <- 1e1
@@ -23,33 +23,64 @@ source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
 effects <- seq(0, 0.5, length=3) # change in location
+# effects <- sqrt(40/400) * seq(0, 0.5, length=3) # change in location
+
 
 ## Signal in scale
 Sigma <- diag(p)
+# Sigma <- ar1_cov(p, rho=0.8)
+# Sigma <- comSym_cov(p, rho=0.7) 
+# Sigma <- diag((1:p)*p/sum(1:p))
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
+# Sys.getpid()
+
 library(RhpcBLASctl)
 blas_set_num_threads(1)
+# get_num_cores()
+# get_num_procs()
+# blas_get_num_procs()
 
 registerDoMC(cores=110)
+
+# Testing parallelization:
+# foreach(i=1:60) %dopar% {
+#   eigen(matrix(rnorm(1e6), ncol = 1e3, nrow = 1e3))$values[[1]][[1]]
+# }
+# foreach(i=1:20) %:% foreach(j=1:3) %dopar% mean(rnorm(1e7))
 ```
 
 
 ```{r independent noise variable folds}
 pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   foreach(effect=effects, .combine=rbind)  %do% {
-    # effect <- effects[[2]]
     
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
     
-    # Shift alternative:
-    noise <- .noise + effect * labels
+    ## t noise
+    # .noise <- rmvt(n=n, sigma = Sigma, df=3) 
+    
+    ## Shift alternative:
+    # noise <- .noise + effect * labels
+    
+    ## Scale alternative:
+    A <- diag(n) 
+    A[labels,labels] <- A[labels,labels]*(1:n)^(-effect)
+    noise <- A %*% .noise 
+    # plot(noise, col=labels+1, cex=1); abline(h=0,v=0, lty=2)
+    
+    # Golland's mixture null:
+    # .noise <- rmvnorm(n=n, sigma = Sigma) # Gaussian noise
+    # shift <- rep(sqrt(9/p), p)
+    # shift.group <- 2*rbinom(n, 1, (0.5-effect)^labels*(0.5+effect)^(1-labels))-1
+    # noise <- .noise + t(outer(shift, shift.group))
+    # plot(noise, col=labels+1, cex=1); abline(h=0,v=0, lty=2)
     
     ## Compute observed statistic
     x1 <- noise[labels,]
@@ -64,18 +95,20 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       Oracle=t_Oracle(x1, x2, Sigma, Sigma),
       Hotelling=t_Hotelling(x1, x2, FALSE),
       Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      sd=t_SD(x1, x2),
       lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-      lda.highdim.1=t_dlda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.highdim.2=t_hdrda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.highdim.3=t_sdlda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.highdim.4=t_sdlda_boot(noise, labels, B=50, type2=1, type=1),
-      svm.highdim.1=t_svml2_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-      svm.highdim.2=t_svm_highdim_boot(noise, labels, B=50, type2=1, cost=1e-1, type=1)
+      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
+      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
+      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
+      sd=t_SD(x1, x2),
+      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
+      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
+      svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+      svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
+      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
+      svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+      svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
     )
-    
     
     
     # Prepare to permute
@@ -105,16 +138,19 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
         Oracle=t_Oracle(x1, x2, Sigma, Sigma),
         Hotelling=t_Hotelling(x1, x2, FALSE),
         Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-        sd=t_SD(x1, x2),
         lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
-        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-        lda.highdim.1=t_dlda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.highdim.2=t_hdrda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.highdim.3=t_sdlda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.highdim.4=t_sdlda_boot(noise, labels, B=50, type2=1, type=1),
-        svm.highdim.1=t_svml2_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-        svm.highdim.2=t_svm_highdim_boot(noise, labels, B=50, type2=1, cost=1e-1, type=1)
+        lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
+        lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
+        lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
+        sd=t_SD(x1, x2),
+        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
+        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
+        svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+        svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+        svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
+        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
+        svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+        svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
       )
     } # End permutation
     
@@ -129,7 +165,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 } 
   
 pbPost(type = "note", body = "Done", the.message)
-save.image(file=paste(file.name,".RData", sep=''))
+# save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
@@ -144,6 +180,9 @@ pvals.1.9 %<>%  as.data.table()
 names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
   
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
+
+statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
+pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
 
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
 ```
