--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -257,7 +257,7 @@ We do so via simulation, which details are now described.
 [TODO: Add (Implemented with the \emph{svm} \R function \citep{meyer_e1071:_2015})]
 
 The following details are common to all the reported simulations, unless stated otherwise in a figure's caption. 
-The \R code for the simulations can be found in [TODO].
+The \R code for the simulations can be found in \url{http://www.john-ros.com/permuting_accuracy/}.
 
 Each simulation is based on $4,000$ replications. 
 In each replication, we generate $n$ i.i.d. samples from a shift model $\x_i = \mu \y^*_i + \eta_i$.
