--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -10,4 +10,7 @@ Welcome to the code accompanying the _Better-Than-Chance Classification for Sign
 You can find here the R code generating the plots in the manuscript. 
 Note that these are BIG simulations, so running them on your laptop may not be a good idea. 
 
-TODO
+# Figure 1
+
+
+# Figure 2
